# podcast-host-transcription-pipeline

./: .gitignore  Convert Audio to TXT diarized.ps1  Convert MP3 to TXT diarized.ps1  Debug podcast transcribe environment.ps1  README.md  Run Podcast Transcribe.ps1  podcast_transcribe_README.md  podcast_transcribe_config.example.json  podcast_transcribe_host.py  podcast_transcribe_host_architecture.md  podcast_transcribe_outputs.py  podcast_transcribe_requirements.txt  podcast_transcribe_speakers.py  podcast_transcribe_state.py  preferred_replacements.json  pyproject.toml
docs/: podcast_pipeline_contract.md  roadmap.md
examples/: podcast_transcribe_config.example.json  preferred_terms.txt
scripts/: Convert-AudioToDiarizedText.ps1  Debug-PodcastTranscribeEnvironment.ps1  Migrate-LegacyPodcastTranscribeState.ps1  PodcastTranscribeLauncher.Common.ps1
speaker_reference_samples/: speakers.json
src/podcast_transcribe/: __init__.py  cleanup.py  cli.py  config.py  contract.py  models.py  outputs.py  quality.py  speakers.py  state.py
tests/: __init__.py  test_cleanup.py  test_config.py  test_contract.py  test_integration_outputs.py  test_missing_speaker_fallback.py  test_outputs.py  test_quality.py  test_speakers.py  test_state.py
